--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>InnoHub - We're available for marketing</title>
+  <title>Pgcafandb - We're available for marketing</title>
 
   <!-- 
     - favicon
@@ -36,7 +36,7 @@
   <header class="header" data-header>
     <div class="container">
 
-      <a href="#" class="logo">InnoHub</a>
+      <a href="#" class="logo">Pgcafandb</a>
 
       <nav class="navbar container" data-navbar>
         <ul class="navbar-list">
@@ -65,10 +65,7 @@
             <a href="#contact" class="navbar-link" data-nav-link>Contact Us</a>
           </li>
 
-          <li>
-            <a href="#" class="btn btn-primary">Get Started</a>
-          </li>
-
+   
         </ul>
       </nav>
 
@@ -96,9 +93,9 @@
 
           <div class="hero-content">
 
-            <p class="hero-subtitle">InnoHub Marketing Agency</p>
+            <p class="hero-subtitle">Pgca Food And Beverages</p>
 
-            <h1 class="h1 hero-title">We are available for marketing</h1>
+            <h1 class="h1 hero-title">We are available for Serving</h1>
 
             <p class="hero-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temporthem incididunt ut labore et
@@ -106,7 +103,7 @@
               aliqua.
             </p>
 
-            <a href="#" class="btn btn-primary">Get Started</a>
+            
 
           </div>
 
@@ -526,7 +523,7 @@
 
           <h2 class="h2 section-title">Are You Ready? Let's get to Work!</h2>
 
-          <a href="#" class="btn btn-secondary">Get Started</a>
+         
 
         </div>
       </section>
@@ -793,7 +790,7 @@
     <div class="container">
 
       <p class="copyright">
-        &copy; 2022 All Rights Reserved by <a href="#" class="copyright-link">codewithsadee</a>
+        &copy; 2024 All Rights Reserved by <a href="#" class="copyright-link">PGCAFANDB</a>
       </p>
 
     </div>
